# Python-File-Cleaner-CLI-Tool

./: Cargo.toml  README.md  cargo.toml  index.html
.github/workflows/: main.yml
github_page/: styles.css
python_files/clean_python_files/: dirty_example_cleaned.py  file_size_cleaned.py
python_files/dirty_python_files/: dirty_example.py  file_size.py  git_issues.py  syntax_error.py
src/: lib.rs  main.rs
tests/: git_issues_cleaned.py  syntax_error.py  syntax_error_cleaned.py
