[package]
name = "python-cleaner"
version = "0.1.0"
edition = "2021"
authors = ["Senam Dayie"]
description = "A fast Python whitespace and indentation cleaner for syntax, git, and file size issues"
license = "MIT"
repository = "https://github.com/SDayie/Python-File-Cleaner-CLI-Tool.git"
keywords = ["python", "formatter", "cli", "whitespace", "git"]
categories = ["command-line-utilities"]

[[bin]]
name = "python-cleaner"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
