[package]
name = "python-cleaner"
version = "0.1.1"
edition = "2021"
authors = ["Senam Dayie <senamadayie@gmail.com>"]
description = "A fast Python whitespace and indentation cleaner for syntax, git, and file size issues"
license = "MIT"
repository = "https://github.com/SDayie/Python-File-Cleaner-CLI-Tool.git"
readme = "README.md"
keywords = ["python", "formatter", "cli", "whitespace", "git"]
categories = ["command-line-utilities"]

[lib]
name = "python_cleaner"
path = "src/lib.rs"

[[bin]]
name = "python-cleaner"
path = "src/main.rs"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
